feat: implement 4 endpoints from podcastindex
stats, trending, soundbits and search
