# src/controllers/categories.ts
@@ -1,50 +1,72 @@
-import fetch from 'node-fetch';
-import crypto from 'crypto';
-import { Get, Route } from "tsoa";
+import { Get, Query, Route } from "tsoa";
 
 import { CategoriesResponse } from "../types/category";
-import { PODCASTINDEX } from '../utils/constants';
-import { AnyQueryOptions } from '../types/shared';
+import { AnyQueryOptions, SearchResponse, SoundbitesResponse, StatsResponse, TrendingResponse } from '../types/shared';
+import { DataService } from '../types/data-service';
 
-@Route("categories")
-export default class CategoriesController {    
+@Route("/")
+export default class CategoriesController {
 
-    @Get("/")
-    public async getCategories(): Promise<CategoriesResponse> {
-        const result = await this.fetch<CategoriesResponse>("/categories/list");        
-        return result;
-      }
+    private _dataService: DataService;
 
-    private generateHeaders() {
-        const currentTime = Math.floor(Date.now() / 1000);
-        const sha1Hash = crypto.createHash("sha1");
-        const data4Hash = PODCASTINDEX.API_KEY + PODCASTINDEX.API_SECRET + currentTime;
-        sha1Hash.update(data4Hash);
-        const hash4Header = sha1Hash.digest("hex");
-        const userAgent = `${process.env.npm_package_name}/${process.env.npm_package_version}`;
-
-        return {
-            "Content-Type": "application/json",
-            "X-Auth-Date": `${currentTime}`,
-            "X-Auth-Key": PODCASTINDEX.API_KEY,
-            Authorization: hash4Header,
-            "User-Agent": userAgent,
-        };
+    constructor(dataService: DataService) {
+        this._dataService = dataService;
     }
 
-    private fetch<T>(endpoint: string, qs?: AnyQueryOptions): Promise<T> {
-        const start = Date.now();
-        const queryString = qs ? qs : null;
-        const options = {
-            method: `GET`,
-            headers: this.generateHeaders(),
+    @Get("/categories")
+    public async getCategories(): Promise<CategoriesResponse> {
+        const result = await this._dataService.fetch<CategoriesResponse>("/categories/list");
+        return result;
+    }
+
+    @Get("/stats")
+    public async getStats(): Promise<StatsResponse> {
+        const result = await this._dataService.fetch<StatsResponse>("/stats/current");
+        return result;
+    }
+
+    @Get("/trending")
+    public async getTrending(
+        @Query() max?: number,
+        @Query() lang?: string,
+        @Query() since?: number,
+        @Query() cat?: string
+    ): Promise<TrendingResponse> {
+        let qs: AnyQueryOptions = {
+            max: max ?? 25,
+            lang: lang ?? 'en',
+            since: since,
+            cat: cat
         };
-        const url = `${PODCASTINDEX.API_URL}${endpoint}${queryString ? `?${queryString}` : ``}`;
-        return fetch(url, options).then((res) => {
-            if (res.status >= 200 && res.status < 300) {
-                return res.json() as T;
-            }
-            throw new Error(res.statusText);
-        });
+        const result = await this._dataService.fetch<TrendingResponse>("/podcasts/trending", qs);
+        return result;
+    }
+
+    @Get("/soundbites")
+    public async getSoundbites(@Query() max?: number): Promise<SoundbitesResponse> {
+        let qs: AnyQueryOptions = {
+            max: max
+        };
+        const result = await this._dataService.fetch<SoundbitesResponse>("/recent/soundbites", qs);
+        return result;
+    }
+
+    @Get("/search/byterm")
+    public async searchByTerm(
+        @Query() q: string,
+        @Query() clean?: boolean,
+        @Query() max?: number,
+        @Query() fulltext?: boolean
+    ): Promise<SearchResponse> {
+        console.log(clean, fulltext);
+        console.log(typeof clean, typeof max);
+        let qs: AnyQueryOptions = {
+            q: q,
+            max: max ?? 25,
+            clean: clean,
+            fulltext: fulltext,
+        };
+        const result = await this._dataService.fetch<SearchResponse>("/search/byterm", qs);
+        return result;
     }
 }
