# src/routes/index.ts
@@ -1,8 +1,13 @@
 import express from "express";
+import { ByteLengthQueuingStrategy } from "stream/web";
 import CategoriesController from "../controllers/categories";
 import PingController from "../controllers/ping";
+import { DataService } from "../types/data-service";
+import { PodcastIndexDataService } from "../utils/podcast-index-data-service";
 
 const router = express.Router();
+const dataService: DataService = new PodcastIndexDataService();
+const controller = new CategoriesController(dataService);
 
 router.get("/ping", async (_req, res) => {
   const controller = new PingController();
@@ -10,9 +15,37 @@ router.get("/ping", async (_req, res) => {
   return res.send(response);
 });
 
-router.get("/categories", async (_req, res) => {
-  const controller = new CategoriesController();
+router.get("/categories", async (_req, res) => {  
   const response = await controller.getCategories();
+  return res.send(response);
+});
+
+router.get("/stats", async (_req, res) => {  
+  const response = await controller.getStats();
+  return res.send(response);
+});
+
+router.get("/trending", async (_req, res) => {  
+  const max: number = _req.query.max as unknown as number;
+  const lang: string = _req.query.lang as unknown as string;
+  const since: number = _req.query.since as unknown as number;
+  const cat: string = _req.query.cat as unknown as string;
+  const response = await controller.getTrending(max, lang, since, cat);
+  return res.send(response);
+});
+
+router.get("/soundbites", async (_req, res) => {  
+  const max: number = _req.query.max as unknown as number;
+  const response = await controller.getSoundbites(max);
+  return res.send(response);
+});
+
+router.get("/search/byterm", async (_req, res) => {  
+  const q: string = _req.query.q as unknown as string;
+  const max: number = _req.query.max as unknown as number;
+  const clean: boolean = _req.query.clean === 'true';
+  const fulltext: boolean = _req.query.fulltext  === 'true';
+  const response = await controller.searchByTerm(q, clean, max, fulltext);
   return res.send(response);
 });
 
