# src/types/category.ts
@@ -1,13 +1,11 @@
-import { Status } from "./shared";
+import { BaseResponse } from "./shared";
 
 export type Category = {
     id: number;
     name: string;
 };
 
-export type CategoriesResponse = {
-    status: Status,
-    count: number,
-    description: string,
+export type CategoriesResponse  = BaseResponse & {    
+    count: number,    
     feeds: Category[]
-}
+} ;
